Fixed nav overflow scrolling for release 0, need fix for control buttons to be added in release 1

--- a/src/components/NavPanel/NavPanel.scss
+++ b/src/components/NavPanel/NavPanel.scss
@@ -8,17 +8,22 @@ aside {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
 
   nav {
-    flex: 1 1 auto;
+    flex: 1;
+    overflow: auto;
     margin-top: 35px;
     display: flex;
     flex-direction: column;
 
     & > div {
-      flex: 1 1 auto;
 
-      &:last-of-type {
+      &:first-of-type {
+        min-height: min-content;
+      }
+
+      &:nth-child(2) {
         flex: 0 0 auto;
 
         li {
