--- a/src/containers/Dashboard/Dashboard.scss
+++ b/src/containers/Dashboard/Dashboard.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  height: 100vh;
 
   main {
     flex: 1 1 auto;
